--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,10 @@
-
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/openjdk:8-jdk
+    steps:
+      - checkout
+      - run:
+         name: install aws
+         command: echo "hello World"  
