--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: circleci/openjdk:8-jdk
     steps:
       - checkout
+      - setup_remote_docker
       - run:
          name: install aws
          command: |
@@ -24,5 +25,5 @@ jobs:
       - run: 
          name: "Bulid & Push Docker Image"
          command: |
-           sudo docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest .
-           sudo docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest 
+           docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest .
+           docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest 
