--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,25 @@ jobs:
       - image: circleci/openjdk:8-jdk
     steps:
       - checkout
+      - setup_remote_docker
+      - run:
+         name: install aws
+         command: |
+          echo "hello World"
+          curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+          unzip awscli-bundle.zip
+          sudo ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
       - run:
          name: List the content
          command: |
            ls -la
            pwd
-           echo $CIRCLE_SHA1
-           echo $CIRCLE_TAG
-           echo $CIRCLE_BUILD_NUM
-           echo $CIRCLE_BRANCH
-     
+           docker --version
+      - run: 
+         name: Log in to AWS ECR
+         command: eval $(aws ecr get-login --no-include-email --region eu-west-1)
+      - run: 
+         name: "Bulid & Push Docker Image"
+         command: |
+           docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1 .
+           docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1
