--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,12 @@ jobs:
            ls -la
            pwd
            docker --version
-      - run: 
-         name: Log in to AWS ECR
-         command: eval $(aws ecr get-login --no-include-email --region eu-west-1)
-      - run: 
-         name: "Bulid & Push Docker Image"
-         command: |
-           docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1 .
-           docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1
+           echo $CIRCLE_PR_NUMBER
+      # - run: 
+      #    name: Log in to AWS ECR
+      #    command: eval $(aws ecr get-login --no-include-email --region eu-west-1)
+      # - run: 
+      #    name: "Bulid & Push Docker Image"
+      #    command: |
+      #      docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1 .
+      #      docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1
