--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,11 +20,11 @@ jobs:
            pwd
            docker --version
            echo $CIRCLE_PR_NUMBER
-      # - run: 
-      #    name: Log in to AWS ECR
-      #    command: eval $(aws ecr get-login --no-include-email --region eu-west-1)
-      # - run: 
-      #    name: "Bulid & Push Docker Image"
-      #    command: |
-      #      docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1 .
-      #      docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1
+      - run: 
+         name: Log in to AWS ECR
+         command: eval $(aws ecr get-login --no-include-email --region eu-west-1)
+      - run: 
+         name: "Bulid & Push Docker Image"
+         command: |
+           docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1 .
+           docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1
