--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,9 @@ jobs:
             mkdir $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$HOME/bin:$PATH
             echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc
             kubectl version --short --client 
+            aws eks list-clusters
+            aws eks update-kubeconfig --name eks-sbx-cluster
+            kubectl get svc
 
       # - run: 
       #    name: "Bulid & Push Docker Image"
