--- a/nginx.yaml
+++ b/nginx.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.7.9
+        image: 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest
         ports:
         - containerPort: 80
