--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,5 +26,5 @@ jobs:
       - run:
          name: Install Kubectl 
          command: |
-           ./shellscript.sh
+           sh shellscript.sh
 
