--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,12 @@ jobs:
          command: eval $(aws ecr get-login --no-include-email --region eu-west-1)
       - run: 
          name: Publish to ECR
-         command: docker build -t 
+         command: |
+            docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1 .
+            docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest
+            docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1
       # - run:
       #    name: Install Kubectl 
       #    command: |
       #      sh shellscript.sh
-            docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1 .
-            docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1
+
