--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,16 +23,8 @@ jobs:
       - run: 
          name: Log in to AWS ECR
          command: eval $(aws ecr get-login --no-include-email --region eu-west-1)
-      - run: 
-         name: Publish to ECR
-         command: |
-            commit=$(git rev-parse --short HEAD)
-            echo $commit
-            docker build -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest -t 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1 .
-            docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:latest
-            docker push 873930443481.dkr.ecr.eu-west-1.amazonaws.com/test-circleci:$CIRCLE_SHA1
       - run:
-         name: Deploy to Cluster
+         name: Publish to ECR, Deploy to Cluster
          command: |
            ./deploy.sh
 
