--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,19 +7,11 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
-         name: install aws
+         name: Install aws CLI
          command: |
-          echo "hello World"
           curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
           unzip awscli-bundle.zip
           sudo ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
-      - run:
-         name: List the content
-         command: |
-           ls -la
-           pwd
-           docker --version
-           echo $CIRCLE_PR_NUMBER
       - run: 
          name: Log in to AWS ECR
          command: eval $(aws ecr get-login --no-include-email --region eu-west-1)
